force-app/main/default/objects/SupplierCosts__c/SupplierCosts__c.object-meta.xml
<CustomObject>
    <label>Supplier Costs</label>
    <nameField>
        <displayFormat>SE-{000000}</displayFormat>
        <label>Supplier Costs Nr.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Costs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>