force-app/main/default/objects/SupplierCosts__c/fields/AbacusCostCenterNr__c.field-meta.xml
<CustomField>
    <fullName>AbacusCostCenterNr__c</fullName>
    <label>Abacus Cost Center Nr.</label>
    <length>4</length>
    <type>Text</type>
</CustomField>