force-app/main/default/objects/SupplierCosts__c/fields/AbacusDocumentNrPosNr__c.field-meta.xml
<CustomField>
    <fullName>AbacusDocumentNrPosNr__c</fullName>
    <externalId>true</externalId>
    <label>Abacus Document Nr Pos Nr</label>
    <length>12</length>
    <type>Text</type>
</CustomField>