force-app/main/default/objects/SupplierCosts__c/fields/AbacusFinanceAccountNr__c.field-meta.xml
<CustomField>
    <fullName>AbacusFinanceAccountNr__c</fullName>
    <label>Abacus Finance Account Nr.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>