force-app/main/default/objects/SupplierCosts__c/fields/AbacusProjectNr__c.field-meta.xml
<CustomField>
    <fullName>AbacusProjectNr__c</fullName>
    <label>Abacus Project Nr.</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>