force-app/main/default/objects/SupplierCosts__c/fields/AbacusSupplierCostsGross__c.field-meta.xml
<CustomField>
    <fullName>AbacusSupplierCostsGross__c</fullName>
    <label>Abacus Supplier Costs Gross</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>