force-app/main/default/objects/SupplierCosts__c/fields/AbacusSupplierCostsNet__c.field-meta.xml
<CustomField>
    <fullName>AbacusSupplierCostsNet__c</fullName>
    <label>Abacus Supplier Costs Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>