force-app/main/default/objects/SupplierCosts__c/fields/AbacusSupplierCostsVATAmount__c.field-meta.xml
<CustomField>
    <fullName>AbacusSupplierCostsVATAmount__c</fullName>
    <label>Abacus Supplier Costs VAT Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>