force-app/main/default/objects/SupplierCosts__c/fields/AbacusVATType__c.field-meta.xml
<CustomField>
    <fullName>AbacusVATType__c</fullName>
    <label>Abacus VAT Type</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>