force-app/main/default/objects/SupplierCosts__c/fields/BillerAccount__c.field-meta.xml
<CustomField>
    <fullName>BillerAccount__c</fullName>
    <formula>SupplierInvoice__r.BillerAccount__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Biller Account</label>
    <type>Text</type>
</CustomField>