force-app/main/default/objects/SupplierCosts__c/fields/BillerAccountProjectNr__c.field-meta.xml
<CustomField>
    <fullName>BillerAccountProjectNr__c</fullName>
    <formula>SupplierInvoice__r.BillerAccount__r.Id &amp; &quot;_&quot; &amp;PackageName__r.ProjectName__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Biller Account Project Nr.</label>
    <type>Text</type>
</CustomField>