force-app/main/default/objects/SupplierCosts__c/fields/BillingViaCompany__c.field-meta.xml
<CustomField>
    <fullName>BillingViaCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing via (Company)</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>SupplierCostsBillingVia</relationshipName>
    <type>Lookup</type>
</CustomField>