force-app/main/default/objects/SupplierCosts__c/fields/ContractPartner__c.field-meta.xml
<CustomField>
    <fullName>ContractPartner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Supplier Costs (Contract Partner)</relationshipLabel>
    <relationshipName>SupplierCosts1</relationshipName>
    <type>Lookup</type>
</CustomField>