force-app/main/default/objects/SupplierCosts__c/fields/CostsSupplierCostsGross__c.field-meta.xml
<CustomField>
    <fullName>CostsSupplierCostsGross__c</fullName>
    <label>Costs - Supplier Costs Gross</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>