force-app/main/default/objects/SupplierCosts__c/fields/CostsSupplierCostsGrossCHF__c.field-meta.xml
<CustomField>
    <fullName>CostsSupplierCostsGrossCHF__c</fullName>
    <label>Costs - Supplier Costs Gross (CHF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>