force-app/main/default/objects/SupplierCosts__c/fields/CostsSupplierCostsNet__c.field-meta.xml
<CustomField>
    <fullName>CostsSupplierCostsNet__c</fullName>
    <label>Costs - Supplier Costs Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>