force-app/main/default/objects/SupplierCosts__c/fields/CostsSupplierCostsNetCHF__c.field-meta.xml
<CustomField>
    <fullName>CostsSupplierCostsNetCHF__c</fullName>
    <label>Costs -  Supplier Costs Net (CHF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>