force-app/main/default/objects/SupplierCosts__c/fields/DocumentCode__c.field-meta.xml
<CustomField>
    <fullName>DocumentCode__c</fullName>
    <formula>SupplierInvoice__r.DocumentCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Code</label>
    <type>Text</type>
</CustomField>