force-app/main/default/objects/SupplierCosts__c/fields/EmailAbacusVisa__c.field-meta.xml
<CustomField>
    <fullName>EmailAbacusVisa__c</fullName>
    <label>Email Abacus Visa</label>
    <type>Email</type>
</CustomField>