force-app/main/default/objects/SupplierCosts__c/fields/EmailProjectResponsibleBusiness__c.field-meta.xml
<CustomField>
    <fullName>EmailProjectResponsibleBusiness__c</fullName>
    <label>Email Project Responsible - (Business)</label>
    <type>Email</type>
</CustomField>