force-app/main/default/objects/SupplierCosts__c/fields/FinanceDate__c.field-meta.xml
<CustomField>
    <fullName>FinanceDate__c</fullName>
    <label>Finance Date</label>
    <type>Date</type>
</CustomField>