force-app/main/default/objects/SupplierCosts__c/fields/LegalFinance__c.field-meta.xml
<CustomField>
    <fullName>LegalFinance__c</fullName>
    <description>From Abacus the Legal for the invoice position. Information only.</description>
    <label>Legal Finance</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>