force-app/main/default/objects/SupplierCosts__c/fields/LocalCurrency__c.field-meta.xml
<CustomField>
    <fullName>LocalCurrency__c</fullName>
    <formula>TEXT( SupplierInvoice__r.LocalCurrency__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Local Currency</label>
    <type>Text</type>
</CustomField>