force-app/main/default/objects/SupplierCosts__c/fields/LocalCurrencyToCHF__c.field-meta.xml
<CustomField>
    <fullName>LocalCurrencyToCHF__c</fullName>
    <label>Local Currency to CHF</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>