force-app/main/default/objects/SupplierCosts__c/fields/OrderByCompany__c.field-meta.xml
<CustomField>
    <fullName>OrderByCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order by (Company)</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>SupplierCostsOrderByCompany</relationshipName>
    <type>Lookup</type>
</CustomField>