force-app/main/default/objects/SupplierCosts__c/fields/PackageName__c.field-meta.xml
<CustomField>
    <fullName>PackageName__c</fullName>
    <label>Package Name</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <filterItems>
            <field>Package__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Supplier Costs, License (Provision), License (Direct)</value>
        </filterItems>
        <filterItems>
            <field>Package__c.ProjectName__c</field>
            <operation>equals</operation>
            <valueField>$Source.ProjektName__c</valueField>
        </filterItems>
        <filterItems>
            <field>Package__c.ProjectName__r.ProjectNr__c</field>
            <operation>notEqual</operation>
            <value>P-105657</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Package__c</referenceTo>
    <relationshipLabel>Supplier Costs</relationshipLabel>
    <relationshipName>SupplierCosts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>