force-app/main/default/objects/SupplierCosts__c/fields/ProjectCurrency__c.field-meta.xml
<CustomField>
    <fullName>ProjectCurrency__c</fullName>
    <label>Project Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CHF</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>