force-app/main/default/objects/SupplierCosts__c/fields/ProjectPartner__c.field-meta.xml
<CustomField>
    <fullName>ProjectPartner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Supplier Costs (Project Partner)</relationshipLabel>
    <relationshipName>SupplierCosts2</relationshipName>
    <type>Lookup</type>
</CustomField>