force-app/main/default/objects/SupplierCosts__c/fields/ProjektName__c.field-meta.xml
<CustomField>
    <fullName>ProjektName__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project Name</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Supplier Costs</relationshipLabel>
    <relationshipName>Supplier_Costs</relationshipName>
    <type>Lookup</type>
</CustomField>