force-app/main/default/objects/SupplierCosts__c/fields/Purchasing__c.field-meta.xml
<CustomField>
    <fullName>Purchasing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchasing</label>
    <referenceTo>Purchasing__c</referenceTo>
    <relationshipLabel>Supplier Costs</relationshipLabel>
    <relationshipName>SupplierCosts</relationshipName>
    <type>Lookup</type>
</CustomField>