force-app/main/default/objects/SupplierCosts__c/fields/ServiceSupplierCostsNet__c.field-meta.xml
<CustomField>
    <fullName>ServiceSupplierCostsNet__c</fullName>
    <formula>IF(ServiceSupplierCostsNetPM__c &lt;&gt;0,ServiceSupplierCostsNetPM__c,
 CostsSupplierCostsNetCHF__c  *1/ CurrencyRateToCHF__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service - Supplier Costs Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>