force-app/main/default/objects/SupplierCosts__c/fields/ServiceSupplierCostsNetCHF__c.field-meta.xml
<CustomField>
    <fullName>ServiceSupplierCostsNetCHF__c</fullName>
    <formula>ServiceSupplierCostsNet__c * CurrencyRateToCHF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service -  Supplier Costs Net (CHF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>