force-app/main/default/objects/SupplierCosts__c/fields/ServiceSupplierCostsNetPM__c.field-meta.xml
<CustomField>
    <fullName>ServiceSupplierCostsNetPM__c</fullName>
    <label>Service -  Supplier Costs Net (PM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>