force-app/main/default/objects/SupplierCosts__c/fields/SupplierCostsAcceptedPM__c.field-meta.xml
<CustomField>
    <fullName>SupplierCostsAcceptedPM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supplier Costs accepted (PM)</label>
    <type>Checkbox</type>
</CustomField>