force-app/main/default/objects/SupplierCosts__c/fields/SupplierCostsDate__c.field-meta.xml
<CustomField>
    <fullName>SupplierCostsDate__c</fullName>
    <label>Supplier Costs Date</label>
    <type>Date</type>
</CustomField>