force-app/main/default/objects/SupplierCosts__c/fields/SupplierCostsInvoicedPM__c.field-meta.xml
<CustomField>
    <fullName>SupplierCostsInvoicedPM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supplier Costs invoiced (PM)</label>
    <type>Checkbox</type>
</CustomField>