force-app/main/default/objects/SupplierCosts__c/fields/SupplierCostsType__c.field-meta.xml
<CustomField>
    <fullName>SupplierCostsType__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Costs Type</label>
    <type>Text</type>
</CustomField>