force-app/main/default/objects/SupplierCosts__c/fields/SupplierInvoice__c.field-meta.xml
<CustomField>
    <fullName>SupplierInvoice__c</fullName>
    <label>Supplier Invoice</label>
    <referenceTo>SupplierInvoice__c</referenceTo>
    <relationshipLabel>Supplier Costs</relationshipLabel>
    <relationshipName>SupplierCosts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>