force-app/main/default/objects/SupplierCosts__c/fields/SupplierInvoicePositionText__c.field-meta.xml
<CustomField>
    <fullName>SupplierInvoicePositionText__c</fullName>
    <label>Supplier Invoice Position Text</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>