force-app/main/default/objects/SupplierCosts__c/fields/ValCheckValidSupplierCost__c.field-meta.xml
<CustomField>
    <fullName>ValCheckValidSupplierCost__c</fullName>
    <formula>TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ValCheckValidSupplierCost</label>
    <type>Checkbox</type>
</CustomField>