force-app/main/default/objects/SupplierCosts__c/fields/VisaNr__c.field-meta.xml
<CustomField>
    <fullName>VisaNr__c</fullName>
    <label>Visa Nr.</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>