force-app/main/default/objects/SupplierCosts__c/fields/ZAbacusInterface__c.field-meta.xml
<CustomField>
    <fullName>ZAbacusInterface__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ZAbacusInterface</label>
    <referenceTo>AbacusInterface__c</referenceTo>
    <relationshipLabel>Supplier Costs</relationshipLabel>
    <relationshipName>SupplierCosts</relationshipName>
    <type>Lookup</type>
</CustomField>