force-app/main/default/objects/SupplierCosts__c/recordTypes/LicenseCostsDirect.recordType-meta.xml
<RecordType>
    <fullName>LicenseCostsDirect</fullName>
    <active>false</active>
    <label>License Costs (Direct)</label>
</RecordType>