force-app/main/default/objects/SupplierCosts__c/recordTypes/LicenseCostsProvision.recordType-meta.xml
<RecordType>
    <fullName>LicenseCostsProvision</fullName>
    <active>false</active>
    <label>License Costs (Provision)</label>
</RecordType>