force-app/main/default/objects/SupplierCosts__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>SupplierInvoice__c</columns>
    <columns>AbacusSupplierCostsNet__c</columns>
    <columns>ProjektName__c</columns>
    <columns>FinanceDate__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>