force-app/main/default/objects/SupplierCosts__c/listViews/Projekt_nicht_zuweisbare_Drittkosten.listView-meta.xml
<ListView>
    <fullName>Projekt_nicht_zuweisbare_Drittkosten</fullName>
    <columns>NAME</columns>
    <columns>SupplierInvoice__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>ProjektName__c</columns>
    <columns>CostsSupplierCostsGross__c</columns>
    <columns>BillerAccount__c</columns>
    <columns>AbacusCostCenterNr__c</columns>
    <columns>AbacusDocumentNrPosNr__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ProjectNr__c</field>
        <operation>equals</operation>
        <value>P-105657</value>
    </filters>
    <label>Projekt nicht zuweisbare Drittkosten</label>
    <sharedTo>
        <group>Skywalk_FIN_Alle</group>
    </sharedTo>
</ListView>